Fix spacing and apply flex to footer header and main

--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ li {
 
 footer {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
   padding: 10px 15px;
   background-color: var(--cor-antracite);
   align-items: center;
@@ -292,6 +292,12 @@ footer {
   text-decoration: none;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+}
+
+.footer-header {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .footer-title, .footer-subtitle {
@@ -305,6 +311,13 @@ footer {
 
 .footer-subtitle {
   color: var(--cor-cinza-escuro);
+  text-decoration: underline;
+}
+
+.footer-main {
+  display: inline-flex;
+  flex-direction: row;
+  gap: 2rem;
 }
 
 .githubIcon {
@@ -315,6 +328,7 @@ footer {
 
 .footer-link-title {
   text-align: center;
+  text-decoration: none;
   font-size: 20px;
   font-weight: 500;
   transition: scale 0.3s ease, font-weight 0.3s ease;
